edge-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tier1
  labels:
    istio-injection: enabled
